fixed bug on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -584,7 +584,7 @@ input:checked + .slider:before {
 		position: relative;
 		// for some reason this makes .middle fill container up properly
 		img {
-			height: 80vh;
+			max-height: 80vh;
 			max-width: 100%;
 			width: auto;
 		}
